2008-03-21	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* lib/include/vncview.h:
	* lib/src/vncview.cpp:
	in scaled view keep aspect ratio of screen and also do not expand
	image if vncView-size > framebuffer-size

2008-03-20	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ima/src/client.cpp:
	set user-name as tooltip if hostname is displayed in titlebar

	* ima/resources/sidebar.png:
	* ima/italc.qrc:
	* ima/src/italc_side_bar.h:
	* ima/src/side_bar_widget.cpp:
	* ima/src/italc_side_bar.cpp:
	improved appearence of left toolbar

	* ima/src/main_window.h:
	* ima/src/classroom_manager.h:
	* ima/src/main_window.cpp:
	* ima/src/classroom_manager.cpp:
	- moved auto-rearrange and adjust-buttons from toolbar into
	  classroom-menu
	- show classroom-menu as context-menu of workspace-area
	- removed support-workspace and added Direct-Support-button in toolbar
	  instead
	- use spacing=0 for main-layout which removes odd vertical bar between
	  left toolbar and working-space

	* ima/src/kmultitabbar.cpp:
	* ima/src/kmultitabbar.h:
	updated KMultiTabBar from KDE-SVN

	* ima/src/support_widget.cpp:
	* ima/src/support_widget.h:
	* ima/Makefile.am:
	removed support_widget.*

	* ima/src/classroom_manager.h:
	* ima/src/client.cpp:
	* ima/src/classroom_manager.cpp:
	applied patches by Andrei Krueger <anc/at/iki/dot/fi> which displays
	host-name in client-windows if "show user"-name checkbox in
	classroom-manager is not activated

	* lib/src/lock_widget.cpp:
	disable screen-saver while screen is locked (e.g. while fullscreen-demo)

2008-03-19	Tobias Doerffel	<tobydox/at/users/dot/sourceforge/dot/net>

	* ica/ica.qrc:
	* ica/resources/fi.ts:
	* ica/resources/fi.qm:
	* setup/setup.qrc:
	* setup/resources/fi.ts:
	* setup/resources/fi.qm:
	* ima/italc.qrc:
	* ima/resources/fi.ts:
	* ima/resources/fi.qm:
	* lib/italc_core.qrc:
	* lib/resources/fi.ts:
	* lib/resources/fi.qm:
	added Finnish localization-files by Andrei Krueger <anc/at/iki/dot/fi>
